[gd_scene load_steps=3 format=3 uid="uid://1w46kse8u11v"]

[ext_resource type="PackedScene" uid="uid://bn4a828drg1dp" path="res://scenes/ui/sprites/coin.tscn" id="1_4h2y2"]
[ext_resource type="Script" uid="uid://8fi7qpwcfunn" path="res://scenes/ui/widgets/coin_widget.gd" id="1_jbdy0"]

[node name="CoinWidget" type="Control"]
layout_mode = 3
anchors_preset = 0
size_flags_vertical = 4
script = ExtResource("1_jbdy0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -42.0
offset_top = -46.0
grow_horizontal = 0
grow_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_type_variation = &"WidgetPanel"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_constants/separation = 0

[node name="CoinLabel" type="Label" parent="VBoxContainer/PanelContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.6
text = "000"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Control" type="Control" parent="VBoxContainer/PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
size_flags_horizontal = 8

[node name="Coin" parent="VBoxContainer/PanelContainer/HBoxContainer/Control" instance=ExtResource("1_4h2y2")]
position = Vector2(18.000002, 9)
scale = Vector2(1.9375, 1.9375)
autoplay = "default"
frame_progress = 0.29248422

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_constants/separation = 3

[node name="GoalCoinLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.6
theme_override_font_sizes/font_size = 12
text = "Ziel:"
horizontal_alignment = 1
vertical_alignment = 2

[node name="GoalCoinCountLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 2
size_flags_stretch_ratio = 0.6
theme_override_font_sizes/font_size = 12
text = "0"
horizontal_alignment = 1
vertical_alignment = 2
